kubernetes/templates/ingress.yaml
---
# Source: lightweight-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-lightweight-app
spec:
  type: ClusterIP
  selector:
    app: node-lightweight-app
  ports:
  - port: 3000
    targetPort: 3000
---
# Source: lightweight-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-lightweight-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-lightweight-app
  template:
    metadata:
      labels:
        app: node-lightweight-app
    spec:
      containers:
        - name: node-lightweight-app
          image: "anubha2709/node-lightweight-app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
# Source: lightweight-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-lightweight-app
  annotations:
spec:
  rules:
    - host: lightweight-app.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-lightweight-app
              port:
                number: 3000
